Getting pom.xml ready to merge with release

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ml.merryfurr</groupId>
     <artifactId>stone</artifactId>
-    <version>1.8.9-SNAPSHOT</version>
+    <version>0.1.0</version>
     <name>Stone</name>
     <url>https://github.com/Merryfurr/Stone/</url>
 
